--- a/books_service/package.json
+++ b/books_service/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.11.1",
     "@grpc/proto-loader": "^0.7.13",
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
@@ -91,4 +92,3 @@
     "testEnvironment": "node"
   }
 }
-
