--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,30 +1,30 @@
-version: '3'
+version: '3.8'
 services:
 
   mongodb:
     image: mongo
-    container_name: my_mongodb
+    container_name: mongo_db_server_prod
     restart: always
     ports:
       - "27017:27017"
     volumes:
       - mongodb_data:/data/db
-      - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+      - ./common/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
 
   redis:
       image: redis:alpine3.20
-      container_name: redis_cache_server
+      container_name: redis_cache_server_dev
       ports:
         - "6379:6379"
 
   nginx:
-    image: nginx:alpine3
-    container_name: nginx
+    image: nginx:stable
+    container_name: nginx_dev
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./frontend/build:/usr/share/nginx/html
     ports:
-      - "3000:80"
+      - "443:443"
     environment:
       - NGINX_HOST=foobar.com
       - NGINX_PORT=80
