--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,52 +3,56 @@ worker_processes auto;
 
 events {
     worker_connections 1024;
-};
+}
 
 http {
     include /etc/nginx/mime.types;
-    default_type appication/octet-stream;
+    default_type application/octet-stream;
     sendfile on;
     keepalive_timeout 65;
 
-    upstream main_service {
-        server main_service:3000;
+    upstream books_service {
+        server books_service_prod:3000;
     }
 
-    upstream main_service {
-        server auth_service:3000;
+    upstream auth_service {
+        server auth_service_prod:3000;
     }
 
     server {
-        listen 80;
-        server_name foobar.com;
+        listen 443 ssl;
+        server_name 127.0.0.2;
 
-        # Статические файлы фронта
+        ssl_certificate /etc/nginx/ssl/myapp.crt;
+        ssl_certificate_key /etc/nginx/ssl/myapp.key;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
         location / {
             root /usr/share/nginx/html;
             index index.html;
-            try_files $url $url/ /index.html;
+            try_files $uri $uri/ /index.html;
         }
 
-        # Прокси для main_service
         location /api/books/ {
-            proxy_pass http://main_service/;
+            proxy_pass http://books_service/;
             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP @remote_addr;
-            proxy_set_header X-Forwarded-For @proxy_add_x_forwarded_for;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Прокси для auth_service
         location /api/users/ {
             proxy_pass http://auth_service/;
             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP @remote_addr;
-            proxy_set_header X-Forwarded-For @proxy_add_x_forwarded_for;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         error_log /var/log/nginx/error.log;
-        access_log  /var/log/nginx/access.log;
+        access_log /var/log/nginx/access.log;
     }
 }
