--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -52,6 +52,16 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        location /api/auth/ {
+            proxy_pass http://auth_service/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        
+
         error_log /var/log/nginx/error.log;
         access_log /var/log/nginx/access.log;
     }
