--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,12 +22,17 @@ services:
     container_name: nginx_prod
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - ./frontend/build:/usr/share/nginx/html
+      - ./nginx/ssl/myapp.crt:/etc/nginx/ssl/myapp.crt:ro
+      - ./nginx/ssl/myapp.key:/etc/nginx/ssl/myapp.key:ro
     ports:
-      - "443:443"
-    environment:
-      - NGINX_HOST=foobar.com
-      - NGINX_PORT=80
+      - "80:80"
+    depends_on:
+      - frontend
+      - books_service
+      - auth_service
+      - token_service
 
   books_service:
     build: ./books_service
@@ -61,8 +66,8 @@ services:
     env_file:
       - ./auth_service/.env
 
-  token-service:
-    build: ./token-service
+  token_service:
+    build: ./token_service
     ports: 
       - "3003:3000"
     depends_on:
@@ -73,9 +78,19 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-    container_name: token-service_prod
+    container_name: token_service_prod
     env_file:
-      - ./token-service/.env
+      - ./token_service/.env
+
+  frontend:
+    build: ./frontend
+    ports:
+      - "3000:3000"
+    container_name: frontend
+    environment:
+      - NODE_ENV=production
+    volumes:
+      - ./frontend/src:/app/src
 
 volumes:
   mongodb_data:
